--- a/webpack/package.json
+++ b/webpack/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "vue": "2.3.3"
+  },
   "devDependencies": {
-    "webpack": "^2.2.0"
+    "webpack": "2.2.0"
   }
 }
