feat: sub module banch

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "lint-commit"]
 	path = lint-commit
 	url = git@github.com:luyi10year/lint-commit.git
+	branch = feature/commit_lint_0109
