feat: functional demo

--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "commander": "^2.15.1",
     "download-git-repo": "^1.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
